# tauri-plugin-pldownloader

./: .cursorrules  Cargo.toml  LICENSE  PUBLISHING.md  README.md  build.rs  package.json
.github/workflows/: release.yml
android/: build.gradle.kts  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Downloader.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.tsx  main.tsx  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Download.tsx
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: DownloaderPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: copy-file-path.toml  download-private.toml  download-public.toml  download_private.toml  download_public.toml  save-file-private-from-buffer.toml  save-file-public-from-buffer.toml  save_file_private_from_path.toml  save_file_public_from_path.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  fs.rs  lib.rs  mobile.rs  models.rs
src/lib/: Download.tsx
