[package]
name = "tauri-plugin-pldownloader"
version = "1.0.1"
authors = [ "Phuc Le <lecaobaophuc@gmail.com>" ]
description = "Tauri plugin for cross-platform file downloading (Android/iOS) with public/private destinations and a TypeScript client."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-pldownloader"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lecaobaophuc0912/tauri-plugin-pldownloader"
homepage = "https://github.com/lecaobaophuc0912/tauri-plugin-pldownloader"
documentation = "https://docs.rs/tauri-plugin-pldownloader"
keywords = ["tauri", "plugin", "download", "android", "ios"]
categories = ["development-tools", "filesystem"]

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"
tokio = "1.47.1"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
